syntax = "proto3";

package media_requests.v1;

option go_package = "github.com/RA341/gouda/generated/media_requests/v1";

service MediaRequestService {
  rpc Search(SearchRequest) returns (SearchResponse) {}
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  rpc Edit(EditRequest) returns (EditResponse) {}
  rpc Exists(ExistsRequest) returns (ExistsResponse) {}
  rpc Retry(RetryRequest) returns (RetryResponse) {}
  rpc AddMedia(AddMediaRequest) returns (AddMediaResponse) {}
}

message SearchRequest {
  Media mediaQuery = 1;
}
message SearchResponse {
  repeated Media results = 1;
}

message ListRequest {
  uint64 limit = 1;
  uint64 offset = 2;
}
message ListResponse {
  uint64 totalRecords = 2;
  repeated Media results = 1;
}

message DeleteRequest {
  uint64 requestId = 1;
}
message DeleteResponse {}

message EditRequest {
  Media media = 1;
}
message EditResponse {}

message ExistsRequest {
  uint64 mamId = 1;
}
message ExistsResponse {
  Media media = 1;
}

message RetryRequest {
  uint64 ID = 1;
}
message RetryResponse {
  Media media = 1;
}

message AddMediaRequest {
  Media media = 1;
}
message AddMediaResponse {}


message Media {
  uint64 ID = 1;
  string author = 2;
  string book = 3;
  string series = 4;
  uint32 series_number = 5;
  string category = 6;
  uint64 mam_book_id = 7;
  string file_link = 12;
  string status = 8;
  string torrent_id = 9;
  uint32 time_running = 10;
  string torrent_file_location = 11;
  string createdAt = 13;
}
