syntax = "proto3";

package settings.v1;

option go_package = "github.com/RA341/gouda/generated/settings/v1";

service SettingsService {
  rpc LoadSettings(LoadSettingsRequest) returns (LoadSettingsResponse) {}
  rpc UpdateSettings(UpdateSettingsRequest) returns (UpdateSettingsResponse) {}

  rpc UpdateMamSettings(UpdateMamSettingsRequest) returns (UpdateMamSettingsResponse) {}
  rpc UpdateTorrentClient(UpdateTorrentClientRequest) returns (UpdateTorrentClientResponse) {}
  rpc UpdateFolderPaths(UpdateFolderPathsRequest) returns (UpdateFolderPathsResponse) {}

  rpc ListDirectories(ListDirectoriesRequest) returns (ListDirectoriesResponse) {}


  rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse) {}

  rpc ListSupportedClients(ListSupportedClientsRequest) returns (ListSupportedClientsResponse) {}
  rpc TestClient(TorrentClient) returns (TestTorrentResponse) {}
}


message ListDirectoriesRequest {
  string filePath = 1;
}

message ListDirectoriesResponse {
  repeated string folders = 1;
  repeated string files = 2;
}

message UpdateFolderPathsRequest {
  Directories dirs = 1;
  UserPermissions perms = 2;
}

message UpdateFolderPathsResponse {}

message UpdateMamSettingsRequest {
  string mamToken = 1;
}

message UpdateMamSettingsResponse {}

message UpdateTorrentClientRequest {
  TorrentClient client = 1;
  Downloader downloader = 2;
}

message UpdateTorrentClientResponse {}

message UpdateSettingsRequest {
  GoudaConfig settings = 1;
}

message UpdateSettingsResponse {
}

message LoadSettingsRequest {}

message LoadSettingsResponse {
  GoudaConfig settings = 1;
}

message UpdateMamTokenRequest {}

message UpdateMamTokenResponse {}

message GetMetadataRequest {}

message TestTorrentResponse {}

message GetMetadataResponse {
  string version = 1;
  string binaryType = 2;
}

message ListSupportedClientsRequest {}

message ListSupportedClientsResponse {
  repeated string clients = 1;
}

// Top-level Gouda configuration
message GoudaConfig {
  int32 port = 1;
  string allowed_origins = 2;
  string ui_path = 3;
  bool auth = 4;
  string mam_token = 5;
  Directories dir = 6;
  Logger log = 7;
  Downloader downloader = 8;
  UserPermissions permissions = 9;
  TorrentClient torrentClient = 10;
}

message Directories {
  string downloadDir = 2;
  string completeDir = 3;
  string torrentDir = 4;
}

message Logger {
  string level = 1;
  bool verbose = 2;
}

message Downloader {
  string timeout = 1;
  bool ignore_timeout = 2;
}

message UserPermissions {
  int32 uid = 1;
  int32 gid = 2;
}

message TorrentClient {
  string clientType = 2;
  string host = 1;
  string password = 3;
  string protocol = 4;
  string user = 5;
}